# Nbodysimulation

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  nbody_sim  test_logger  test_particle  test_vec3
scripts/: plot_orbits.py
src/: main.cpp
src/core/: Particle.h  Vec3.h
src/dynamics/: Gravity.h
src/integrators/: ForwardEuler.h  Leapfrog.h  TimeIntegrator.h
src/utils/: Energy.h  Logger.h
tests/: TestEnergy.cpp  TestIntegrator.cpp  TestLogger.cpp  TestParticle.cpp  TestVec3.cpp
